--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <link rel="stylesheet" type="text/css" href="/slick.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" type="text/css" href="/slick-theme.css" media="print" onload="this.media='all'">
 </head>
-<body>
+<body style="background-color:#111827;">
     <div class="min-h-screen bg-gray-900">
         <!-- Header -->
         <header class="bg-gray-900/80 backdrop-blur-sm border-b border-gray-800 sticky top-0 z-50">
@@ -119,7 +119,7 @@
                     <p class="text-xl mb-8 text-gray-300">Servicing Perth's Northern Suburbs</p>
                     <div class="flex space-x-4">
                         <a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry">
-                            <button class="bg-red-500 text-white px-8 py-3 rounded-lg hover:bg-red-600 transition">
+                            <button class="text-xl bg-red-500 text-white px-16 py-5 rounded-lg hover:bg-red-600 transition">
                                 Get a Quote
                             </button>
                         </a>
@@ -141,13 +141,13 @@
                             <img src="/images/cwall.jpg" alt="Fence Icon" class="h-24 w-24 rounded-full border-2 border-red-500 mb-4 object-cover" loading="lazy">
                             <h3 class="text-2xl font-semibold mb-3 text-white">Precast Concrete Panel & Post Retaining</h3>
                         </div>
-                        <p class="text-gray-400">Retaining where space is limited.<br>
-                            Concrete or steel posts.<br>
-                            Retaining up to 2.4m high.<br>
-                            Garden edging.<br>
-                            Terracing, steps and ramps.<br>
-                            Replacing of termite infested sleepers and other failed retaining systems.<br>
-                            Cost effective alternative to brick and limestone walls.</p>
+                        <p class="text-gray-400">Retaining where space is limited.</p>
+                        <p class="text-gray-400 leading-relaxed">Concrete or steel posts.</p>
+                        <p class="text-gray-400 leading-relaxed">Retaining up to 2.4m high.</p>
+                        <p class="text-gray-400 leading-relaxed">Garden edging.</p>
+                        <p class="text-gray-400 leading-relaxed">Terracing, steps and ramps.</p>
+                        <p class="text-gray-400 leading-relaxed">Replacing of termite infested sleepers and other failed retaining systems.</p>
+                        <p class="text-gray-400 leading-relaxed">Cost effective alternative to brick and limestone walls.</p>
                     </div>
                     <div class="bg-gray-900 p-8 rounded-lg border border-gray-700 hover:border-red-500 transition duration-300">
                         <!-- <i data-lucide="fence" class="h-12 w-12 text-red-500 mb-4"></i> -->
@@ -155,13 +155,13 @@
                             <img src="/images/fence.jpg" alt="Fence Icon" class="h-24 w-24 rounded-full border-2 border-red-500 mb-4 object-cover" loading="lazy">
                             <h3 class="text-2xl font-semibold mb-3 text-white">Colorbond Fencing & Gates</h3>
                         </div>
-                        <p class="text-gray-400">Fencing that looks great on both sides of the fence.<br>
-                            14 colours to choose from.<br>
-                            Custom made Colorbond gates.<br>
-                            Fencing can be cored into existing limestone walls.<br>
-                            Won't rot or be eaten by termites.<br>
-                            Easy to maintain.<br>
-                            Bluescope Steel provides a 10 year warranty on Colorbond steel sheets, posts and rails.</p>
+                        <p class="text-gray-400 leading-relaxed">Fencing that looks great on both sides of the fence.</p>
+                        <p class="text-gray-400 leading-relaxed">14 colours to choose from.</p>
+                        <p class="text-gray-400 leading-relaxed">Custom made Colorbond gates.</p>
+                        <p class="text-gray-400 leading-relaxed">Fencing can be cored into existing limestone walls.</p>
+                        <p class="text-gray-400 leading-relaxed">Won't rot or be eaten by termites.</p>
+                        <p class="text-gray-400 leading-relaxed">Easy to maintain.</p>
+                        <p class="text-gray-400 leading-relaxed">Bluescope Steel provides a 10 year warranty on Colorbond steel sheets, posts and rails.</p>
                     </div>
                     <!-- <div class="bg-gray-900 p-8 rounded-lg border border-gray-700 hover:border-red-500 transition duration-300">
                         <i data-lucide="users" class="h-12 w-12 text-red-500 mb-4"></i>
