--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="relative container mx-auto px-4 h-full flex items-center">
                 <div class="max-w-2xl text-white">
                     <h1 class="text-5xl font-bold mb-6">Installers of Precast Concrete Panel & Post Retaining and Colorbond Fencing & Gates</h1>
-                    <p class="text-xl mb-8 text-gray-300">Servicing Perth's Northern Suburbs</p>
+                    <p class="text-2xl mb-8 text-gray-300">Servicing Perth's Northern Suburbs</p>
                     <div class="flex space-x-4">
                         <a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry">
                             <button class="text-xl bg-red-500 text-white px-16 py-5 rounded-lg hover:bg-red-600 transition">
@@ -175,7 +175,7 @@
         <!-- Services -->
         <section id="services" class="py-20 bg-gray-900">
             <div class="container mx-auto px-4">
-                <h2 class="text-4xl font-bold text-center mb-16 text-white">Just A Few Examples Of Our Work</h2>
+                <!-- <h2 class="text-4xl font-bold text-center mb-16 text-white">Just A Few Examples Of Our Work</h2> -->
                 <div class="max-w-6xl mx-auto" id="ourwork-carousel">
                     <div class="ourwork-slider">
                         <!-- Testimonial 1 -->
