--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <div class="flex items-center justify-between">
                     <div class="flex items-center space-x-2">
                         <!-- <i data-lucide="shield" class="h-8 w-8 text-red-500"></i> -->
-                        <span class="text-2xl font-bold text-white">Redline Retaining</span>
+                        <!-- <span class="text-2xl font-bold text-white">Redline Retaining</span> -->
+                        <img src="/images/stone-retaining-wall.jpg" alt="Retaining Wall" loading="lazy">
                     </div>
                     <!-- <nav class="hidden md:flex space-x-8">
                         <a href="#services" class="text-gray-300 hover:text-red-500 transition">Services</a>
