--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     <div class="min-h-screen bg-gray-900">
         <!-- Header -->
         <header class="bg-gray-900/80 backdrop-blur-sm border-b border-gray-800 sticky top-0 z-50">
-            <div class="container mx-auto px-4 py-4">
+            <div class="container mx-auto px-4 py-4" style="border-bottom:3px solid #FF0000">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center space-x-2">
                         <!-- <i data-lucide="shield" class="h-8 w-8 text-red-500"></i> -->
                         <!-- <span class="text-2xl font-bold text-white">Redline Retaining</span> -->
-                        <img src="/images/stone-retaining-wall.jpg" alt="Retaining Wall" loading="lazy">
+                        <img src="/images/Redline-Retaining-topLogo.png" alt="logo" loading="lazy" style="width: 500px;">
                     </div>
                     <!-- <nav class="hidden md:flex space-x-8">
                         <a href="#services" class="text-gray-300 hover:text-red-500 transition">Services</a>
@@ -109,7 +109,7 @@
             <div class="absolute inset-0">
                 <div class="parallax-container">
                     <div class="parallax-image">
-                        <img src="/images/stone-retaining-wall.jpg" alt="Retaining Wall" loading="lazy">
+                        <img src="/images/IMG_57082.jpg" alt="Retaining Wall" loading="lazy">
                     </div>
                 </div>
                 <div class="absolute inset-0 bg-black bg-opacity-70"></div>
