--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
                         <a href="#testimonials" class="text-gray-300 hover:text-red-500 transition">Testimonials</a>
                         <a href="#contact" class="text-gray-300 hover:text-red-500 transition">Contact</a>
                     </nav> -->
-                    <a href="tel:+61400105600" class=" md:flex items-center space-x-2 text-red-500 hover:text-red-400 transition" style="min-width: 100px;">
-                        <i data-lucide="phone" class="h-5 w-5"></i>
-                        <span>Call Us</span>
-                    </a>
+                    <div style="white-space: nowrap;">
+                        <a href="tel:+61400105600" class=" md:flex items-center space-x-2 text-red-500 hover:text-red-400" style="display: flex; float: right; white-space: nowrap;">
+                            <i data-lucide="phone" class="h-5 w-5"></i>
+                            <div style="white-space: nowrap;">Call Us</div>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </header>
+        
 
         <!-- Hero Section -->
         <section class="relative h-[600px]">
