--- a/index.html
+++ b/index.html
@@ -91,19 +91,14 @@
                         <!-- <span class="text-2xl font-bold text-white">Redline Retaining</span> -->
                         <img src="/images/Redline-Retaining-topLogo.png" alt="logo" loading="lazy" style="width: 500px;">
                     </div>
-                    <!-- <nav class="hidden md:flex space-x-8">
-                        <a href="#services" class="text-gray-300 hover:text-red-500 transition">Services</a>
-                        <a href="#testimonials" class="text-gray-300 hover:text-red-500 transition">Testimonials</a>
-                        <a href="#contact" class="text-gray-300 hover:text-red-500 transition">Contact</a>
-                    </nav> -->
-                    <div style="white-space: nowrap;">
-                        <a href="tel:+61400105600" class=" md:flex items-center space-x-2 text-red-500 hover:text-red-400" style="display: flex; float: right; white-space: nowrap;">
-                            <i data-lucide="phone" class="h-5 w-5"></i>
-                            <div style="white-space: nowrap;">Call Us</div>
-                        </a>
-                    </div>
+                    <a href="tel:+61400105600" class=" md:flex items-center space-x-2 text-red-500 hover:text-red-400" style="display: flex; float: right; white-space: nowrap;">
+                        <i data-lucide="phone" class="h-5 w-5"></i>
+                        <div style="white-space: nowrap;">Call Us</div>
+                    </a>
                 </div>
             </div>
+        </header>
+    
         
 
         <!-- Hero Section -->
