--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <p class="text-2xl mb-8 text-gray-300">Servicing Perth's Northern Suburbs</p>
                     <div class="flex space-x-4">
                         <a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry">
-                            <button class="text-xl bg-red-500 text-white px-16 py-5 rounded-lg hover:bg-red-600 transition">
+                            <button class="text-xl bg-red-700 text-white px-16 py-5 rounded-lg hover:bg-red-600 transition">
                                 Get a Quote
                             </button>
                         </a>
@@ -555,7 +555,7 @@
                         dots: false,
                         cssEase: 'ease-out',
                         speed: 500,
-                        draggable: false,
+                        draggable: true,
                         pauseOnHover: true,
                         responsive: [
                             {
@@ -580,7 +580,7 @@
                         dots: false,
                         cssEase: 'ease-out',
                         speed: 500,
-                        draggable: false,
+                        draggable: true,
                         pauseOnHover: true,
                         responsive: [
                             {
