--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <meta property="twitter:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
     <meta property="twitter:image" content="http://www.redlineretaining.com.au/images/og-image.jpg">
 
+    <link rel="canonical">
+        
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
