--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs</title>
     <meta name="title" content="Redline Retaining | Professional Retaining Wall Solutions for Perth's Northern Suburbs">
     <meta name="description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
-    <meta name="keywords" content="retaining walls, retaining wall construction, retaining wall solutions, Australia, professional retaining walls, residential retaining walls, commercial retaining walls, excavator hire, quote, free measure and quote, over 20 years experience">
+    <meta name="keywords" content="retaining wall, redline fencing, retaining wall construction, retaining wall solutions, retaining walls perth, concrete sleepers perth, precast concrete retaining walls perth, panel and post retaining wall, panel and post retaining wall perth, professional retaining walls, residential retaining walls, commercial retaining walls, excavator hire, quote, free measure and quote, over 20 years experience">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
