--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     </div>
 
     <!-- Load critical scripts first -->
-    <script src="/tailwindcss.js" defer></script>
+    <!-- <script src="/tailwindcss.js" defer></script> -->
     
     <!-- Load non-critical scripts asynchronously -->
     <script src="/lucide.min.js" async></script>
