--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.redlineretaining.com.au">
+    <meta property="og:url" content="https://www.redlineretaining.com.au">
     <meta property="og:title" content="Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs">
     <meta property="og:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
-    <meta property="og:image" content="http://www.redlineretaining.com.au/images/og-image.jpg">
+    <meta property="og:image" content="https://www.redlineretaining.com.au/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://www.redlineretaining.com.au">
+    <meta property="twitter:url" content="https://www.redlineretaining.com.au">
     <meta property="twitter:title" content="Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs">
     <meta property="twitter:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
-    <meta property="twitter:image" content="http://www.redlineretaining.com.au/images/og-image.jpg">
+    <meta property="twitter:image" content="https://www.redlineretaining.com.au/images/og-image.jpg">
 
     <link rel="canonical">
         
@@ -42,7 +42,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- Preload critical CSS -->
-    <link rel="preload" href="slick.css" as="style">
+    <link rel="preload" href="/slick.css" as="style">
     <link rel="preload" href="/slick-theme.css" as="style">
     
     <style>
