--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta property="twitter:image" content="https://www.redlineretaining.com.au/images/og-image.jpg">
 
     <link rel="canonical">
+    <link rel="canonical" href="https://www.redlineretaining.com.au" />
         
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
