--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="cache-control" content="max-age=31536000">
     <meta http-equiv="expires" content="Wed, 26 Feb 2040 08:21:57 GMT">
-    <title>Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs</title>
+    <title>Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs, Builders, Contractors, Perth WA</title>
     <meta name="title" content="Redline Retaining | Professional Retaining Wall Solutions for Perth's Northern Suburbs">
-    <meta name="description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
+    <meta name="description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Concrete, Panel, Precast Concrete Panel, Post Retaining, Colorbond Fencing, Gates, residential projects, commercial projects, Retaining walls Perth, WA. Call 0400105600 for free quote.">
+    
+
     <meta name="keywords" content="retaining wall, redline fencing, retaining wall construction, retaining wall solutions, retaining walls perth, concrete sleepers perth, precast concrete retaining walls perth, panel and post retaining wall, panel and post retaining wall perth, professional retaining walls, residential retaining walls, commercial retaining walls, excavator hire, quote, free measure and quote, over 20 years experience">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -17,23 +19,25 @@
     <meta name="author" content="Redline Retaining">
     <meta name="format-detection" content="telephone=yes">
     <meta name="theme-color" content="#ffffff">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph / Facebook -->
+    <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.redlineretaining.com.au">
+    <meta property="og:url" content="https://www.redlineretaining.com.au/">
     <meta property="og:title" content="Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs">
-    <meta property="og:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
+    <meta property="og:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Concrete, Panel, Precast Concrete Panel, Post Retaining, Colorbond Fencing, Gates, residential projects, commercial projects, Retaining walls Perth, WA. Call 0400105600 for free quote.">
     <meta property="og:image" content="https://www.redlineretaining.com.au/images/og-image.jpg">
-
+    <meta  property="og:site_name" content="Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs, Builders, Contractors, Perth WA">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.redlineretaining.com.au">
     <meta property="twitter:title" content="Redline Retaining | Professional Retaining Wall Solutions in Perth's Northern Suburbs">
-    <meta property="twitter:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Professional, reliable, and quality retaining wall services for residential and commercial projects.">
+    <meta property="twitter:description" content="Expert retaining wall construction and solutions across Perth's Northern Suburbs. Concrete, Panel, Precast Concrete Panel, Post Retaining, Colorbond Fencing, Gates, residential projects, commercial projects, Retaining walls Perth, WA. Call 0400105600 for free quote.">
     <meta property="twitter:image" content="https://www.redlineretaining.com.au/images/og-image.jpg">
 
     <link rel="canonical">
-    <link rel="canonical" href="https://www.redlineretaining.com.au/" />
+    <link rel="canonical" href="https://www.redlineretaining.com.au/index.html" />
         
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
