--- a/index.html
+++ b/index.html
@@ -472,9 +472,8 @@
                                     <span class="text-gray-300">Clint - 0400 105 600</span>
                                 </a>
                             </div>
-                            <div class="flex items-center space-x-4">
-                                <i data-lucide="mail" class="h-6 w-6 text-red-500"></i>
-                                <span class="text-gray-300"><a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry">redlineretaining@outlook.com</a></span>
+                            <div class="flex items-center space-x-4 text-gray-300">
+                                <p><a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry" target="_top">redlineretaining@outlook.com</a></p>
                             </div>
                             <!-- <div class="flex items-center space-x-4">
                                 <i data-lucide="clock" class="h-6 w-6 text-red-500"></i>
