--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                     <h1 class="text-5xl font-bold mb-6">Installers of Precast Concrete Panel & Post Retaining and Colorbond Fencing & Gates</h1>
                     <p class="text-2xl mb-8 text-gray-300">Servicing Perth's Northern Suburbs</p>
                     <div class="flex space-x-4">
-                        <a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry">
+                        <p><a href="mailto:redlineretaining@outlook.com?subject=Website Enquiry" target="_top">
                             <button class="text-xl bg-red-700 text-white px-16 py-5 rounded-lg hover:bg-red-600 transition">
                                 Get a Quote
                             </button>
-                        </a>
+                        </a></p>
                         <!-- <button class="border-2 border-red-500 text-red-500 px-8 py-3 rounded-lg hover:bg-red-500 hover:text-white transition">
                             View Projects
                         </button> -->
@@ -473,7 +473,8 @@
                                 </a>
                             </div>
                             <div class="flex items-center space-x-4 text-gray-300">
-                                <p><a href = "mailto:redlineretaining@outlook.com?subject=Website Enquiry" target="_top">redlineretaining@outlook.com</a></p>
+                                <i data-lucide="mail" class="h-6 w-6 text-red-500"></i>
+                                <a href="mailto:redlineretaining@outlook.com?subject=Website Enquiry" target="_top">redlineretaining@outlook.com</a>
                             </div>
                             <!-- <div class="flex items-center space-x-4">
                                 <i data-lucide="clock" class="h-6 w-6 text-red-500"></i>
